--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 23, style.scss */
+/* line 32, style.scss */
 body {
   font-family: Helvetica, Arial, san-serif;
   color: rgba(0, 0, 0, 0.5);
@@ -72,20 +72,20 @@ body {
   background-color: #d1d1d1;
 }
 
-/* line 31, style.scss */
+/* line 40, style.scss */
 h1 {
   font-size: 1.8em;
   line-height: 2.0em;
-  text-shadow: 0px 1px 1px #d1d1d1;
+  text-shadow: 0px 1px 1px #cccccc;
 }
 
-/* line 37, style.scss */
+/* line 46, style.scss */
 h2 {
   font-size: 1.6em;
   line-height: 1.8em;
 }
 
-/* line 42, style.scss */
+/* line 51, style.scss */
 #app {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -104,55 +104,95 @@ h2 {
   width: 400px;
 }
 
-/* line 54, style.scss */
-#tweets-container .tweet {
+/* line 63, style.scss */
+#tweets-container li.tweet {
   overflow: hidden;
   *zoom: 1;
   position: relative;
   padding: 10px 10px 10px 90px;
   border-bottom: 1px solid #333333;
 }
-/* line 60, style.scss */
-#tweets-container .tweet .avatar {
+/* line 69, style.scss */
+#tweets-container li.tweet .avatar {
   position: absolute;
   left: 10px;
   top: 10px;
   width: 80px;
 }
-/* line 66, style.scss */
-#tweets-container .tweet .avatar .default {
+/* line 75, style.scss */
+#tweets-container li.tweet .avatar .default {
   border: 1px solid #000;
   width: 72px;
   height: 72px;
 }
-/* line 74, style.scss */
-#tweets-container .tweet .content .name {
+/* line 83, style.scss */
+#tweets-container li.tweet .content .name {
   color: black;
   font-weight: bold;
 }
-/* line 79, style.scss */
-#tweets-container .tweet .content .message {
+/* line 88, style.scss */
+#tweets-container li.tweet .content .message {
   font-size: 0.9em;
 }
-/* line 84, style.scss */
-#tweets-container .tweet .date {
+/* line 93, style.scss */
+#tweets-container li.tweet .date {
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 12px;
 }
-/* line 91, style.scss */
-#tweets-container .tweet .actions {
+/* line 100, style.scss */
+#tweets-container li.tweet .actions {
   margin: 10px 0 0;
 }
-/* line 94, style.scss */
-#tweets-container .tweet .actions li {
+/* line 103, style.scss */
+#tweets-container li.tweet .actions li {
   list-style-type: none;
   float: left;
   padding: 0 5px 5px 0;
   font-size: 14px;
 }
-/* line 103, style.scss */
+/* line 112, style.scss */
 #tweets-container .tweet:last-child {
   border: none;
+}
+
+/* line 117, style.scss */
+#tweet-box {
+  padding: 10px;
+}
+/* line 120, style.scss */
+#tweet-box #tweet-message {
+  width: 373px;
+  height: 50px;
+  font-size: 0.8em;
+}
+/* line 126, style.scss */
+#tweet-box footer {
+  margin: 10px 0 0;
+  text-align: right;
+}
+/* line 130, style.scss */
+#tweet-box footer #tweet-count {
+  font-size: 14px;
+  margin: 0 5px 0;
+}
+/* line 135, style.scss */
+#tweet-box footer .submit {
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -o-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -khtml-border-radius: 2px;
+  border-radius: 2px;
+  padding: 5px 8px;
+  background: #f5f5f5;
+  border: 1px solid #cccccc;
+  color: #529214;
+  font-size: 12px;
+  cursor: pointer;
+}
+/* line 145, style.scss */
+#tweet-box footer .submit:hover {
+  background-color: #e6efc2;
 }
