--- a/styles/style.css
+++ b/styles/style.css
@@ -186,18 +186,20 @@ h2 {
   width: 373px;
   height: 50px;
   font-size: 0.8em;
+  max-width: 373px;
+  max-height: 100px;
 }
-/* line 134, style.scss */
+/* line 136, style.scss */
 #tweet-box footer {
   margin: 10px 0 0;
   text-align: right;
 }
-/* line 138, style.scss */
+/* line 140, style.scss */
 #tweet-box footer #tweet-count {
   font-size: 14px;
   margin: 0 5px 0;
 }
-/* line 143, style.scss */
+/* line 145, style.scss */
 #tweet-box footer .submit {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -213,15 +215,15 @@ h2 {
   font-weight: bold;
   cursor: pointer;
 }
-/* line 154, style.scss */
+/* line 156, style.scss */
 #tweet-box footer .submit:hover {
   background-color: #e6efc2;
 }
-/* line 158, style.scss */
+/* line 160, style.scss */
 #tweet-box footer .submit:disabled {
   color: #d1d1d1;
 }
-/* line 161, style.scss */
+/* line 163, style.scss */
 #tweet-box footer .submit:disabled:hover {
   background: #f5f5f5;
 }
