--- a/styles/style.css
+++ b/styles/style.css
@@ -153,35 +153,36 @@ h2 {
 /* line 96, style.scss */
 #tweets-container li.tweet .content .message {
   font-size: 0.9em;
+  word-wrap: break-word;
 }
-/* line 101, style.scss */
+/* line 102, style.scss */
 #tweets-container li.tweet .date {
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 12px;
 }
-/* line 108, style.scss */
+/* line 109, style.scss */
 #tweets-container li.tweet .actions {
   margin: 10px 0 0;
 }
-/* line 111, style.scss */
+/* line 112, style.scss */
 #tweets-container li.tweet .actions li {
   list-style-type: none;
   float: left;
   padding: 0 5px 5px 0;
   font-size: 14px;
 }
-/* line 120, style.scss */
+/* line 121, style.scss */
 #tweets-container .tweet:last-child {
   border: none;
 }
 
-/* line 125, style.scss */
+/* line 126, style.scss */
 #tweet-box {
   padding: 10px;
 }
-/* line 128, style.scss */
+/* line 129, style.scss */
 #tweet-box #tweet-message {
   width: 373px;
   height: 50px;
@@ -189,17 +190,17 @@ h2 {
   max-width: 373px;
   max-height: 100px;
 }
-/* line 136, style.scss */
+/* line 137, style.scss */
 #tweet-box footer {
   margin: 10px 0 0;
   text-align: right;
 }
-/* line 140, style.scss */
+/* line 141, style.scss */
 #tweet-box footer #tweet-count {
   font-size: 14px;
   margin: 0 5px 0;
 }
-/* line 145, style.scss */
+/* line 146, style.scss */
 #tweet-box footer .submit {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -215,15 +216,15 @@ h2 {
   font-weight: bold;
   cursor: pointer;
 }
-/* line 156, style.scss */
+/* line 157, style.scss */
 #tweet-box footer .submit:hover {
   background-color: #e6efc2;
 }
-/* line 160, style.scss */
+/* line 161, style.scss */
 #tweet-box footer .submit:disabled {
   color: #d1d1d1;
 }
-/* line 163, style.scss */
+/* line 164, style.scss */
 #tweet-box footer .submit:disabled:hover {
   background: #f5f5f5;
 }
