--- a/styles/style.scss
+++ b/styles/style.scss
@@ -66,6 +66,8 @@ h2 {
 }
 
 #tweets-container {
+	margin: 0 -10px;
+	
 	li.tweet {
 		@include clearfix;
 		position: relative;
@@ -107,7 +109,7 @@ h2 {
 		.date {
 			position: absolute;
 			top: 10px;
-			right: 10px;
+			right: 30px;
 			font-size: 12px;
 		}
 		
@@ -119,6 +121,21 @@ h2 {
 				float: left;
 				padding: 0 5px 5px 0;
 				font-size: 14px;
+			}
+		}
+		
+		a.favorite {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			background-image: url('../images/star4.png');
+			width: 19px;
+			height: 19px;
+			display: block;
+			text-indent: -10000px;
+			
+			&.on {
+				background-image: url('../images/star-lit4.png');
 			}
 		}
 	}
